fixed some issues with text on mobile and added the photo gallery

--- a/styles/homepage.css
+++ b/styles/homepage.css
@@ -59,13 +59,11 @@ h2 {
 .news_subtext{
 	font-weight:500;
 	font-size:30px;
-	width:500px;
-	position:relative;
-	left: 50%;
-	transform: translateX(-50%);
 	margin-left:40px;
 	margin-right:40px;
 	text-shadow: 0px 0px 20px #202C3C;
+	max-width:800px;
+	text-wrap: wrap; 
 }
 .news_link {
 	text-decoration: none;
@@ -98,4 +96,5 @@ h2 {
 	text-decoration: none;
 	color:orange;
 	font-weight:900;
+	padding-bottom:300px;
 }
